--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^3.2.0
   flutter_icons: ^1.1.0
   ff_navigation_bar: ^0.1.5
+  flutter_money_formatter: ^0.8.3
   flutter:
     sdk: flutter
 
