--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "fiscal",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            // "flutterMode": "release"
         }
     ]
 }
