firestore configurado + auto_repository

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 profile=prod
-base_url=https://cuidapet-fabreder.herokuapp.com
+base_url=https://fiscal-de-transito-default-rtdb.firebaseio.com/
 dio_connectTimeout=60000
 dio_receiveTimeout=60000
 google_api_key=AIzaSyDtsixFxsW8PQ02Q3Qkn1tJR61DZUSYSHY
