--- a/.env_dev
+++ b/.env_dev
@@ -1,5 +1,5 @@
 profile=dev
-base_url=http://localhost:8888
+base_url=https://fiscal-de-transito-default-rtdb.firebaseio.com/
 dio_connectTimeout=30000
 dio_receiveTimeout=30000
 google_api_key=AIzaSyDtsixFxsW8PQ02Q3Qkn1tJR61DZUSYSHY
