--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^2.1.0
   firebase_auth: ^0.18.4
   firebase_messaging: ^7.0.3
+  cloud_firestore: ^0.14.4
   flutter_facebook_login: ^3.0.0
   json_annotation: ^3.1.1
   path: ^1.7.0
